--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "astro": "^4.12.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-masonry-css": "^1.0.16",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.5.4"
   }
