--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-"start": "npx serve ./dist",
+"start": "astro dev", 
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/check": "^0.8.2",
+    "@astrojs/node": "^9.5.3",
     "@astrojs/react": "^3.6.0",
     "@astrojs/tailwind": "^5.1.0",
     "@types/react": "^18.3.3",
